k8s-manifests/cast-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-db
spec:
  selector:
    matchLabels:
      app: cast-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cast-db
    spec:
      containers:
        - name: cast-db
          image: postgres:12.1-alpine
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-data-cast
---
apiVersion: v1
kind: Service
metadata:
  name: cast-db
spec:
  ports:
    - port: 5432
  selector:
    app: cast-db
