k8s-manifests/cast-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-service
  template:
    metadata:
      labels:
        app: cast-service
    spec:
      containers:
      - name: cast-service
        image: surabhiharsha5/cast-service:5
        command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cast-service
spec:
  selector:
    app: cast-service
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8000

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: cast-service
# spec:
#   selector:
#     matchLabels:
#       app: cast-service
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: cast-service
#     spec:
#       containers:
#         - name: cast-service
#           image: surabhiharsha5/cast-service:5
#           command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
#           env:
#             - name: DATABASE_URI
#               value: postgresql://cast_db_username:cast_db_password@cast-db/cast_db_dev
#           volumeMounts:
#             - name: app-volume
#               mountPath: /app
#       volumes:
#         - name: app-volume
#           emptyDir: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: cast-service
# spec:
#   ports:
#     - port: 8000
#   selector:
#     app: cast-service
