k8s-manifests/movie-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-db
spec:
  selector:
    matchLabels:
      app: movie-db
  replicas: 1
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
        - name: movie-db
          image: postgres:12.1-alpine
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-data-movie
---
apiVersion: v1
kind: Service
metadata:
  name: movie-db
spec:
  ports:
    - port: 5432
  selector:
    app: movie-db
