k8s-manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingres
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/acme-challenge-type: http01
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - dstjenkins.course-datascientest.cloudns.ch
  #   secretName: dstjenkins # Updated secret name
  rules:
  - host: dstjenkins.course-datascientest.cloudns.ch
    http:
      paths:
      - path: /api/v1/casts
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 8003
      - path: /api/v1/movies
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 8002
